kubernetes/skywalker/home/home.namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: home
  labels:
    istio-injection: enabled
