kubernetes/skywalker/home/grocy.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: grocy

spec:
  gateways:
    - istio-system/feldman-tech
  hosts:
    - grocy.feldman.tech
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grocy
            port:
              number: 8080
